# SuiteSparseWrap_cpp_cs

./: CMakeLists.txt  README  cholmod_wrapper.cpp  cholmod_wrapper.h  dll.def  suitesparse_wrap.cpp  suitesparse_wrap.h
SuiteSparseCSWrap/: SuiteSparseCSWrap.sln
SuiteSparseCSWrap/SolverTest/: Program.cs  SolverTest.csproj
SuiteSparseCSWrap/SuiteSparseCSWrap/: Matrix.cs  Solver.cs  SuiteSparseCSWrap.csproj
SuiteSparseCppVSWrap/: .gitignore  SuiteSparseCppVSWrap.sln
SuiteSparseCppVSWrap/SuiteSparseCppVSWrap/: SuiteSparseCppVSWrap.vcxproj  program.cpp  suitesparse_vswrap.cpp  suitesparse_vswrap.h
cmake/: FindSuiteSparse.cmake
cpptest/: CMakeLists.txt  cpptest.cpp
winlib/lib/: amd.lib  btf.lib  camd.lib  ccolamd.lib  cholmod.lib  colamd.lib  cxsparse.lib  klu.lib  ldl.lib  spqr.lib  suitesparseconfig.lib  umfpack.lib
winlib/lib64/: amd.lib  btf.lib  camd.lib  ccolamd.lib  cholmod.lib  colamd.lib  cxsparse.lib  klu.lib  ldl.lib  spqr.lib  suitesparseconfig.lib  umfpack.lib
